# rapid-public

./: README.md
backend/interface/: Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json
backend/interface/app/: layout.tsx
backend/interface/components/: Header.tsx
backend/service-log/: docker-compose.yml
backend/service-log/activity-log/: Dockerfile
backend/service-log/activity-log/app/: Cargo.toml
backend/service-log/activity-log/app/src/: auth.rs  main.rs
backend/service-log/activity-log/app/src/db/: object.rs  repository.rs
backend/service-log/activity-log/app/src/http/: object.rs  request.rs
backend/service-main/: .gitignore  docker-compose.yml
backend/service-main/proxy/: Dockerfile
backend/service-main/proxy/app/: .gitignore  Cargo.toml  errors.txt
backend/service-main/proxy/app/src/: main.rs
backend/service-main/proxy/app/src/auth/: error.rs  mod.rs  object.rs  session.rs
backend/service-main/proxy/app/src/cache/: eviction.rs  factory.rs  frequency.rs  mod.rs  node.rs  object.rs  worker.rs
backend/service-main/proxy/app/src/db/: mod.rs  object.rs  postgrest.rs  repository.rs
backend/service-main/proxy/app/src/http/: mod.rs  object.rs  request.rs
backend/service-main/proxy/app/src/models/: auth.rs  mod.rs  tus.rs
backend/service-main/proxy/app/src/nlp/: client.rs  object.rs
backend/service-main/proxy/app/src/notification/: chat.rs  common.rs  like.rs  maintenance.rs  mod.rs  objects.rs  profile.rs  recruitment.rs  review.rs  voice_chat.rs
backend/service-main/proxy/app/src/place/: metrics.rs  mod.rs  object.rs  search.rs  trie.rs
backend/service-main/proxy/app/src/recruitment/: fetch.rs  mod.rs  objects.rs  post.rs
backend/service-main/proxy/app/src/s3/: bucket.rs
backend/service-main/proxy/app/src/scheduler/: event.rs  mod.rs  object.rs
backend/service-main/proxy/app/src/sns/: mod.rs  object.rs  voip.rs
backend/service-main/proxy/app/src/user/: metrics.rs  mod.rs  profile.rs
backend/service-main/proxy/app/src/utils/: config.rs  maintenance.rs  mod.rs
backend/service-main/proxy/app/src/vision/: mod.rs  object.rs  safe_search.rs
backend/service-main/proxy/app/src/voice_chat/: event.rs  fetcher.rs  mod.rs  object.rs  waiting.rs
ios/Rapid/: .gitignore  Auth0.xcprivacy  Podfile  architecture.md
(+288 files in other folders)
