[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest-retry = "0.8"
reqwest-middleware = "0.4.2"
futures-util = "0.3"
bytes = "1"
actix-cors = "0.7"
jsonwebtoken = "9"
once_cell = "1"



