[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-appender = "0.2"
tracing-error = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde_with = { version = "3", features = ["chrono_0_4"] }
geo = "0.3"
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
once_cell = "1.21.3"
dotenv = "0.15"
uuid = { version = "1.18", features = ["v4", "serde"] }
jsonwebtoken = "9"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "time",
    "tls-rustls",
    "chrono",
    "json",
] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
sha2 = "0.10"
httpdate = "1.0"
sys-info = "0.9"
dashmap = "6.1.0"
crossbeam-channel = "0.3"
bytes = "1.10.1"
futures-util = "0.3"
reqwest-retry = "0.8"
reqwest-middleware = "0.4.2"
hyper = "1.8.1"
ordered-float = { version = "5.1", features = ["serde"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.118.0"
aws-sdk-sns = "1.95.0"
aws-sdk-scheduler = "1.95.0"
postgrest = "1.0"
urlencoding = "2.1"
base64 = "0.22"
ahash = "0.8.12"
fastrand = "2.3"
strum = { version = "0.28", features = ["derive"] }
priority-queue = "2.7.0"


[dev-dependencies]
actix-rt = "2"
wiremock = "0.6"
mockall = "0.13"
